fix: benerin swagger di semua controller, benerin relasi piutang dengan user
